# ndk_pic

./: README.md  import-summary.txt  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ndk_pic/: MainActivity.java
app/src/main/java/com/example/utils/: JavaImageUtils.java  NativeImageUtils.java
app/src/main/jni/: com_example_utils_NativeImageUtils.c  com_example_utils_NativeImageUtils.h
app/src/main/res/values/: strings.xml
